--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
     <!-- Include JS files -->
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
 </head>
   
 <body>
@@ -20,9 +20,9 @@
   
         <input type="text" id="weight">
   
-        <button id="btn">Calculate</button>
+        <button id="button" onclick="calculate()">Calculate</button>
   
-        <div id="result"></div>
+        <div id="bmi"></div>
     </div>
 </body>
   
