--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="keywords" content="immaculata, ics2o" />
     <meta name="author" content="Edward Mcnamara" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="./fav1_index/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="./fav1_index/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="./fav1_index/favicon-16x16.png" />
-    <link rel="manifest" href="./fav1_index/site.webmanifest" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png" />
+    <link rel="manifest" href="./fav_index/site.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-purple.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -25,20 +25,14 @@
         </div>
       </header>
       <main class="mdl-layout__content">
-        <table>
-          <tr>
-            <th>
-              <h3>Please enter your employment information for our salary program</h3>
-            </th>
-          </tr>
-        </table>
+        <h3>Please enter your employment information for our salary program</h3>
         <!-- Simple Textfield -->
         <form action="#">
           <p>Height (Cm)</p>
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
-              type="text"
+              type="float"
               pattern="-?[0-9]*(\.[0-9]+)?"
               id="height"
             />
