--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-purple.min.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <title> Taxation, with JavaScript</title>
+    <title> BMI Calculator </title>
   </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js">		</script>
@@ -21,11 +21,12 @@
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title"> Congratulations! you're being taxed by the Government!</span>
+          <span class="mdl-layout-title"> BMI Calculator </span>
         </div>
       </header>
       <main class="mdl-layout__content">
-        <h3>Please enter your employment information for our salary program</h3>
+        <h3>Please enter your Height in cm and your weight in kg to calcuate your BMI</h3>
+        <img src = "./images/bmi-image.jpg">
         <!-- Simple Textfield -->
         <form action="#">
           <p>Height (Cm)</p>
@@ -43,7 +44,7 @@
 				
         <!-- Numeric Textfield -->
         <form action="#">
-          <p>Weight (Kg)</p>
+          <center><p>Weight (Kg)</p></center>
           <div class="mdl-textfield mdl-js-textfield">
             <input
               class="mdl-textfield__input"
@@ -51,14 +52,14 @@
               pattern="-?[0-9]*(\.[0-9]+)?"
               id="weight"
             />
-            <label class="mdl-textfield__label" for="weight">base ...</label>
+            <label class="mdl-textfield__label" for="weight">Weight ...</label>
             <span class="mdl-textfield__error">Input is not a number!</span>
           </div>
         </form>
 				
         <!-- Raised button with ripple -->
         <button
-          class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
+        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent"
           onclick="calculate()"
         >
           Calculate
