--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Meta Data -->
     <meta charset="utf-8" />
-    <meta name="description" content="Area with JavaScript" />
+    <meta name="description" content="BMI Calculator Assign-02" />
     <meta name="keywords" content="immaculata, ics2o" />
     <meta name="author" content="Edward Mcnamara" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="./fav_index/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="./fav_index/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="./fav_index/favicon-16x16.png" />
     <link rel="manifest" href="./fav_index/site.webmanifest" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-purple.min.css" />
+    <!--Style Sheet -->
     <link rel="stylesheet" href="./css/style.css" />
     <title> BMI Calculator </title>
   </head>
   <body>
+    <!-- For Googles MDL-->
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js">		</script>
     <script src="./js/script.js"></script>
+    <!-- MDL Header -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
       <header class="mdl-layout__header">
         <div class="mdl-layout__header-row">
           <span class="mdl-layout-title"> BMI Calculator </span>
         </div>
       </header>
+      <!-- Colored text -->
       <main class="mdl-layout__content">
         <h3>Please enter your Height in cm and your weight in kg to calcuate your BMI</h3>
+        <!-- BMI image -->
         <img src = "./images/bmi-image.jpg">
         <!-- Simple Textfield -->
         <form action="#">
@@ -64,10 +71,9 @@
         >
           Calculate
         </button>
-        <br />
+        <br/>
         <p>
             <div id="bmi"></div>
-          </div>
         </p>
       </main>
     </div>
